syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.config.client.v1";

package com.glance.spaces.config.client.v1;

message ClientConfigMessage {

}